--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
 	"repository": "#",
 	"license": "UNLICENSED",
-	"homepage": "https://foranymove.github.io/3js-mirror",
 	"scripts": {
 		"build": "webpack --config ./bundler/webpack.prod.js",
-		"dev": "webpack serve --config ./bundler/webpack.dev.js",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"dev": "webpack serve --config ./bundler/webpack.dev.js"
 	},
 	"dependencies": {
 		"@babel/core": "^7.15.8",
@@ -18,7 +15,6 @@
 		"css-loader": "^6.5.0",
 		"dat.gui": "^0.7.9",
 		"file-loader": "^6.2.0",
-		"gh-pages": "^4.0.0",
 		"html-loader": "^3.0.0",
 		"html-webpack-plugin": "^5.5.0",
 		"mini-css-extract-plugin": "^2.4.3",
